--- a/MarketWizard/MarketWizard/MainWindow.xaml
+++ b/MarketWizard/MarketWizard/MainWindow.xaml
@@ -19,7 +19,8 @@
                     <Button x:Name="browseBodyButton" Content="..." HorizontalAlignment="Left" Margin="683,56,0,0" VerticalAlignment="Top" Width="42" Height="26" Click="browseBody_Click"/>
                     <Button x:Name="browseAttachmentButton" Content="..." HorizontalAlignment="Left" Margin="683,115,0,0" VerticalAlignment="Top" Width="42" Height="26" Click="browseAttachment_Click"/>
                     <Button x:Name="browseAddressButton" Content="..." HorizontalAlignment="Left" Margin="683,163,0,0" VerticalAlignment="Top" Width="42" Height="26" Click="browseAddress_Click"/>
-                    <ProgressBar x:Name="sendingProgressBar" HorizontalAlignment="Left" Height="23" Margin="641,422,0,0" VerticalAlignment="Top" Width="139" Visibility="Hidden"/>
+                    <ProgressBar x:Name="sendingProgressBar" HorizontalAlignment="Left" Height="23" Margin="641,398,0,0" VerticalAlignment="Top" Width="139" Visibility="Hidden"/>
+                    <TextBox x:Name="statusText" HorizontalAlignment="Left" Height="16" Margin="458,426,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="322" Focusable="False" FontSize="9" TextAlignment="Right" Background="{x:Null}"/>
                 </Grid>
             </TabItem>
             <TabItem Header="TabItem">
